<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_ignition_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for sim ignition.</description>
  <maintainer email="bperseghetti@rudislabs.com">Benjamin Perseghetti</maintainer>
  <author email="bperseghetti@rudislabs.com">Benjamin Perseghetti</author>
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rmw</depend>
  <depend>rosconsole</depend>
  
  <depend>geometry_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>ignition-msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>builtin_interfaces</depend>
  <depend>ros_ign_interfaces</depend>
  <depend>ignition-transport</depend>

  <depend>libgflags-dev</depend>
  <depend>ignition-math</depend>
  <depend>image_transport</depend>

  <depend>std_srvs</depend>
  <depend>tinyxml_vendor</depend>

  <depend>rosidl_default_runtime</depend>
  <depend>ignition-gazebo</depend>

  <depend>image_transport_plugins</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_ign_bridge</depend>
  <depend>ros_ign_gazebo</depend>
  <depend>ros_ign_image</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
